[GTK] ControlsPanel string is not localized in LocalizedStringsGtk https://bugs.webkit.org/show_bug.cgi?id=96502

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-09-20
Reviewed by Chris Fleizach.

Source/WebCore:

Adds the ControlsPanel string to the strings localized in LocalizedStringsGtk.

Test: platform/gtk/accessibility/media-controls-panel-title.html

* platform/gtk/LocalizedStringsGtk.cpp:
(WebCore::localizedMediaControlElementString):

LayoutTests:

Added a new test to verify that the accessible object associated with the
MediaControlsPanel has the expected accessible name.

* platform/gtk/accessibility/media-controls-panel-title-expected.txt: Added.
* platform/gtk/accessibility/media-controls-panel-title.html: Added.

Canonical link: https://commits.webkit.org/115190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129141 268f45cc-cd09-0410-ab3c-d52691b4dbfc